<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@color/background"
    tools:context=".fragments.Settings">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        android:layout_marginTop="40dp"
        android:textColor="@color/textHeading"
        android:layout_gravity="center_horizontal"
        android:textSize="30sp"/>


    <ImageView
        android:src="@drawable/user_image"
        android:layout_marginTop="30dp"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:background="@drawable/user_image_bg"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/profile_image" />

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/username"
        android:textSize="20sp"
        android:textColor="@color/textSub"
        />
    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/email_id"
        android:textStyle="normal"
        android:textSize="15sp"
        android:textColor="@color/textSub" />

    <LinearLayout
        android:id="@+id/editProfile"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:background="@drawable/rounded_background_less_curves"
        android:contextClickable="true"
        android:layout_width="match_parent"
        android:weightSum="2"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_marginStart="10dp"
            android:layout_gravity="center"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:tint="@color/textSub"
            android:scaleType="fitCenter"
            android:background="@drawable/profile_icon_bg"
            android:src="@drawable/edit_profile"
            android:contentDescription="@string/edit_profile" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/edit_profile"
            android:fontFamily="@font/sf_pro_display_regular"
            android:textSize="17sp"
            android:padding="15dp"
            android:textColor="@color/textHeading"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/contactUs"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:background="@drawable/rounded_background_less_curves"
        android:contextClickable="true"
        android:layout_width="match_parent"
        android:weightSum="2"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_marginStart="10dp"
            android:layout_gravity="center"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:tint="@color/textSub"
            android:scaleType="fitCenter"
            android:background="@drawable/profile_icon_bg"
            android:src="@drawable/contact_us"
            android:contentDescription="@string/contact_us" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/contact_us"
            android:fontFamily="@font/sf_pro_display_regular"
            android:textSize="17sp"
            android:padding="15dp"
            android:textColor="@color/textHeading"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:background="@drawable/rounded_background_less_curves"
        android:contextClickable="true"
        android:layout_width="match_parent"
        android:weightSum="2"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_marginStart="10dp"
            android:layout_gravity="center"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:tint="@color/textSub"
            android:scaleType="fitCenter"
            android:background="@drawable/profile_icon_bg"
            android:src="@drawable/feedback_form"
            android:contentDescription="@string/submit_feedback" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/submit_feedback"
            android:fontFamily="@font/sf_pro_display_regular"
            android:textSize="17sp"
            android:padding="15dp"
            android:textColor="@color/textHeading"
            />
    </LinearLayout>






    <LinearLayout
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:background="@drawable/rounded_background_less_curves"
        android:contextClickable="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_marginStart="10dp"
            android:layout_gravity="center"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:tint="@color/textSub"
            android:scaleType="fitCenter"
            android:background="@drawable/profile_icon_bg"
            android:src="@drawable/dark_mode"
            android:contentDescription="@string/dark_mode" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dark_mode"
            android:fontFamily="@font/sf_pro_display_regular"
            android:textSize="17sp"
            android:padding="10dp"
            android:textColor="@color/textHeading" />

        <androidx.appcompat.widget.SwitchCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:thumb="@drawable/switch_thumb_custom"
            android:track="@drawable/switch_track_custom"
            app:thumbTint="@color/white"
            app:trackTint="@color/custom_switch_track_color"
            style="@style/CustomSwitchStyle"
            android:layout_gravity="end" />


    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:contextClickable="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_marginStart="10dp"
            android:layout_gravity="center"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:tint="@color/purple_500"
            android:scaleType="fitCenter"
            android:src="@drawable/logout"
            android:contentDescription="@string/logout" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:fontFamily="@font/sf_pro_display_regular"
            android:textSize="17sp"
            android:padding="10dp"
            android:textColor="@color/purple_500" />




    </LinearLayout>



</LinearLayout>