<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".fragments.AddStreamCategory">


    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/back_button"
        android:contentDescription="@string/back"
        app:tint="@color/background" />


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:background="@drawable/user_image_bg"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/user_image" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_background"
        android:layout_marginTop="30dp"
        app:boxBackgroundColor="@color/box"
        android:textColorHint="@color/textSub">

        <EditText
            android:id="@+id/streamCategoryName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/stream_category_name"
            android:textAlignment="center"
            android:inputType="textPersonName"
            android:textColor="@color/textSub"
            android:required="true"
            android:autofillHints="user" />

    </com.google.android.material.textfield.TextInputLayout>




    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_background"
        android:layout_marginTop="30dp"
        app:boxBackgroundColor="@color/box"
        android:textColorHint="@color/textSub">

        <EditText
            android:id="@+id/streamCategoryDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/stream_category_description"
            android:inputType="textLongMessage"
            android:textColor="@color/textSub"
            android:required="true"
            android:autofillHints="user" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_create_stream_category"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/add_category"
        android:background="@drawable/rounded_button_bg"
        android:fontFamily="@font/sf_pro_display_bold"
        android:textAllCaps="false"
        android:hapticFeedbackEnabled="true"
        android:textColor="@color/textHeading" />


</LinearLayout>