<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/background"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:orientation="vertical"
    tools:context=".fragments.MovieManager">


    <TextView
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:layout_marginBottom="40dp"
        android:gravity="center_horizontal"
        android:textColor="@color/textHeading"
        android:text="@string/manage_movies" />



    <LinearLayout
        android:id="@+id/addMovie"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:background="@drawable/rounded_background"
        android:contextClickable="true"
        android:layout_width="match_parent"
        android:weightSum="2"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_marginStart="10dp"
            android:layout_gravity="center"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:tint="@color/textSub"
            android:scaleType="fitCenter"
            android:background="@drawable/profile_icon_bg"
            android:src="@drawable/add"
            android:contentDescription="@string/submit_feedback" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/add_movie"
            android:fontFamily="@font/sf_pro_display_regular"
            android:textSize="17sp"
            android:padding="15dp"
            android:textColor="@color/textHeading"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/updateMovie"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:background="@drawable/rounded_background"
        android:contextClickable="true"
        android:layout_width="match_parent"
        android:weightSum="2"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_marginStart="10dp"
            android:layout_gravity="center"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:tint="@color/textSub"
            android:scaleType="fitCenter"
            android:background="@drawable/profile_icon_bg"
            android:src="@drawable/update"
            android:contentDescription="@string/submit_feedback" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/update_movie"
            android:fontFamily="@font/sf_pro_display_regular"
            android:textSize="17sp"
            android:padding="15dp"
            android:textColor="@color/textHeading"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/deleteMovie"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:background="@drawable/rounded_background"
        android:contextClickable="true"
        android:layout_width="match_parent"
        android:weightSum="2"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_marginStart="10dp"
            android:layout_gravity="center"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:tint="@color/textSub"
            android:scaleType="fitCenter"
            android:background="@drawable/profile_icon_bg"
            android:src="@drawable/delete"
            android:contentDescription="@string/submit_feedback" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/delete_movie"
            android:fontFamily="@font/sf_pro_display_regular"
            android:textSize="17sp"
            android:padding="15dp"
            android:textColor="@color/textHeading"/>

    </LinearLayout>

</LinearLayout>