<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@color/background"
    tools:context=".fragments.AddSubscriptions"
>

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_marginTop="20dp"
        android:padding="20dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textColor="@color/textHeading"
        android:fontFamily="@font/sf_pro_display_bold"
        android:text="@string/add_subscriptions" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="viewEnd"
            android:layout_gravity="end"
            android:textSize="30sp"
            android:textColor="@color/textHeading"
            android:fontFamily="@font/sf_pro_display_bold"
            android:text="@string/plus_button" />


    </LinearLayout>

<LinearLayout
    android:layout_marginTop="5dp"
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:background="@drawable/rounded_background"
    android:weightSum="5"
    android:layout_height="wrap_content">
    <SearchView
        android:gravity="start"
        android:id="@+id/search_bar"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="4"
        app:iconifiedByDefault="false"
        android:queryHint="Search for Streaming Services"
        android:background="@drawable/rounded_background"/>

    <ImageButton
        android:id="@+id/filterButton"
        android:layout_width="10dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:contentDescription="@string/filter"
        android:src="@drawable/ic_filter"
        android:contextClickable="true"
         />
</LinearLayout>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- RecyclerView -->
    <androidx.recyclerview.widget.RecyclerView
        android:layout_marginTop="20dp"
        android:id="@+id/subscriptionsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</ScrollView>

</LinearLayout>